--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v6
         with:
           repository: mwinteringham/restful-booker-platform
-          ref: refs/tags/v2.1
+          ref: main
           path: restful-booker-platform
 
       - name: 🔹  Start microservices with docker-compose
