feat: add GitHub Actions workflow and health check script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e .
 
-      - name: 🔹  Clone restful-booker-platform @ v2.1
+      - name: 🔹  Clone restful-booker-platform
         uses: actions/checkout@v6
         with:
           repository: mwinteringham/restful-booker-platform
