--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,12 +44,19 @@ jobs:
       - name: 🔹  Wait for all services to be healthy
         run: python scripts/wait_for_services.py
 
+      - name: 🔹 Create .env file from GitHub Secrets
+        run: |
+          cat << 'EOF' > .env
+          AUTH.URL=${{ secrets.AUTH_URL }}
+          BOOKING.URL=${{ secrets.BOOKING_URL }}
+          HTTP_CLIENT.TIMEOUT=${{ secrets.HTTP_CLIENT_TIMEOUT }}
+          HTTP_CLIENT.RETRIES=${{ secrets.HTTP_CLIENT_RETRIES }}
+          HTTP_CLIENT.VERIFY_SSL=${{ secrets.HTTP_CLIENT_VERIFY_SSL }}
+          TEST_USER.LOGIN=${{ secrets.TEST_USER_LOGIN }}
+          TEST_USER.PASSWORD=${{ secrets.TEST_USER_PASSWORD }}
+          EOF
+
       - name: 🔹 Run ALL API tests
-        env:
-          AUTH_CLIENT_URL: ${{ secrets.AUTH_CLIENT_URL }}
-          HTTP_CLIENT_TIMEOUT: ${{ secrets.HTTP_CLIENT_TIMEOUT }}
-          TEST_USER_LOGIN: ${{ secrets.TEST_USER_LOGIN }}
-          TEST_USER_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
         run: python -m pytest tests/ --tb=short -v
 
       - name: 🧹  Cleanup (always run)
