feat: implement comprehensive Allure reporting with HTTP observability
Introduce full-featured Allure reporting with deep HTTP-level visibility:
- Attach cURL commands to every request via event_hooks
- Capture and attach structured HTTP request/response logs
- Eliminate stderr duplication by routing logs through buffer
- Add Allure steps, tags, severity and stories for test clarity
- Update test suite (auth, health) with Allure metadata
- Refactor clients and factories to support event hook injection
- Publish Allure reports to GitHub Pages via CI/CD pipeline

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-BOOKING.URL=http://localhost:3000/
-AUTH.URL=http://localhost:3004/
-ROOM.URL=http://localhost:3001/
-REPORT.URL=http://localhost:3005/
-BRANDING.URL=http://localhost:3002/
-MESSAGE.URL=http://localhost:3006/
+BOOKING.URL=http://localhost:3000/booking
+AUTH.URL=http://localhost:3004/auth
+ROOM.URL=http://localhost:3001/room
+REPORT.URL=http://localhost:3005/report
+BRANDING.URL=http://localhost:3002/branding
+MESSAGE.URL=http://localhost:3006/message
 
 
 HTTP_CLIENT.TIMEOUT=30.0
