--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,18 +139,15 @@ jobs:
 
       - name: 🔹 Prepare unified reports structure
         run: |
-          # Создаём структуру
           mkdir -p gh-pages-output/allure
           mkdir -p gh-pages-output/coverage
 
-          # Копируем сгенерированный Allure отчёт
-          cp -r allure-history/* gh-pages-output/allure/
+          cp -v index.html gh-pages-output/allure/ || (echo "❌ Allure index.html not found!" && exit 1)
+          cp -v data/ history/ widgets/ gh-pages-output/allure/ -r || echo "⚠️ Allure assets not copied"
 
-          # Скачиваем и копируем Swagger Coverage
           cp -v coverage-report/coverage.html gh-pages-output/coverage/index.html || (echo "❌ File not found!" && exit 1)
 
 
-          # Создаём главную страницу
           cat > gh-pages-output/index.html << 'EOF'
           <!DOCTYPE html>
           <html>
