--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,98 +136,125 @@ jobs:
         with:
           allure_results: allure-results
           allure_history: allure-history
-          report_path: allure-report  
+          gh_pages: gh-pages-output
+          subfolder: allure/${GITHUB_RUN_NUMBER}
 
-      - name: 🔹 Prepare unified reports structure
+      - name: 🔹 Prepare coverage reports structure
         run: |
-          mkdir -p gh-pages-output/allure
-          mkdir -p gh-pages-output/coverage
+          BUILD_NUMBER="${{ github.run_number }}"
+          mkdir -p "gh-pages-output/coverage/${BUILD_NUMBER}"
+          cp -v coverage-report/coverage.html "gh-pages-output/coverage/${BUILD_NUMBER}/index.html"
 
-          cp -r allure-report/* gh-pages-output/allure/ || (echo "❌ Allure report not found in allure-report/" && exit 1)
+      - name: 🔹 Create index.html for this build
+        run: |
+          BUILD_NUMBER="${{ github.run_number }}"
+          COMMIT_SHA="${GITHUB_SHA::8}"
 
-          cp -v coverage-report/coverage.html gh-pages-output/coverage/index.html || (echo "❌ File not found!" && exit 1)
+          mkdir -p "gh-pages-output/${BUILD_NUMBER}"
 
-
-          cat > gh-pages-output/index.html << 'EOF'
+          cat > "gh-pages-output/${BUILD_NUMBER}/index.html" << EOF
           <!DOCTYPE html>
           <html>
           <head>
-            <title>Test Reports - Restful Booker Platform</title>
+            <title>Build #${BUILD_NUMBER} Reports</title>
             <meta charset="utf-8">
             <style>
-              body {
-                font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-                padding: 40px;
+              body { 
+                font-family: -apple-system, sans-serif; 
+                padding: 40px; 
                 background: #f8f9fa;
-                color: #212529;
               }
-              .container {
-                max-width: 800px;
+              .container { 
+                max-width: 600px; 
                 margin: 0 auto;
-              }
-              h1 {
-                color: #1b6caa;
-                border-bottom: 2px solid #1b6caa;
-                padding-bottom: 10px;
-              }
-              ul {
-                list-style: none;
-                padding: 0;
-              }
-              li {
-                margin: 15px 0;
-                padding: 12px;
                 background: white;
-                border-radius: 8px;
-                box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+                padding: 30px;
+                border-radius: 10px;
+                box-shadow: 0 2px 10px rgba(0,0,0,0.1);
               }
-              a {
-                font-size: 1.2em;
-                text-decoration: none;
-                color: #1b6caa;
-                font-weight: 500;
+              h1 { 
+                color: #2c3e50; 
+                margin-bottom: 5px;
               }
-              a:hover {
-                text-decoration: underline;
-              }
-              .footer {
-                margin-top: 40px;
-                color: #6c757d;
+              .meta {
+                color: #7f8c8d;
+                margin-bottom: 25px;
                 font-size: 0.9em;
-                text-align: center;
+              }
+              .report-card {
+                display: block;
+                padding: 20px;
+                margin: 15px 0;
+                border: 1px solid #e0e0e0;
+                border-radius: 8px;
+                text-decoration: none;
+                color: #2c3e50;
+                transition: all 0.3s;
+                background: #fafafa;
+              }
+              .report-card:hover {
+                background: #e3f2fd;
+                border-color: #2196f3;
+                transform: translateY(-2px);
+                box-shadow: 0 4px 12px rgba(33, 150, 243, 0.2);
+              }
+              .report-icon {
+                font-size: 1.5em;
+                margin-right: 10px;
+                vertical-align: middle;
+              }
+              .allure { color: #4CAF50; }
+              .coverage { color: #9C27B0; }
+              .footer {
+                margin-top: 30px;
+                padding-top: 15px;
+                border-top: 1px solid #eee;
+                color: #95a5a6;
+                font-size: 0.9em;
               }
             </style>
           </head>
           <body>
             <div class="container">
-              <h1>🔍 Test Execution Reports</h1>
-              <ul>
-                <li>🟢 <a href="allure/">Allure Test Reports</a></li>
-                <li>🟣 <a href="coverage/">API Coverage Report (Swagger)</a></li>
-              </ul>
+              <h1>📊 Build #${BUILD_NUMBER}</h1>
+              <div class="meta">
+                Commit: ${COMMIT_SHA} • 
+                Run: <a href="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" 
+                       target="_blank">#${GITHUB_RUN_ID}</a>
+              </div>
+
+              <a class="report-card" href="allure/index.html">
+                <span class="report-icon allure">🟢</span>
+                <strong>Allure Test Report</strong>
+                <div style="margin-top: 8px; color: #666; font-size: 0.95em;">
+                  Detailed test execution results with history and trends
+                </div>
+              </a>
+
+              <a class="report-card" href="coverage/index.html">
+                <span class="report-icon coverage">🟣</span>
+                <strong>Swagger Coverage Report</strong>
+                <div style="margin-top: 8px; color: #666; font-size: 0.95em;">
+                  API endpoint coverage analysis and statistics
+                </div>
+              </a>
+
               <div class="footer">
-                Generated by GitHub Actions • <code>API tests</code> workflow
+                Generated at $(date +"%Y-%m-%d %H:%M:%S") UTC • 
+                <a href="https://github.com/${{ github.repository }}" target="_blank">View repository</a>
               </div>
             </div>
           </body>
           </html>
           EOF
 
-      - name: 🔹 Deploy unified reports to GitHub Pages
+      - name: 🔹 Deploy reports to GitHub Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: gh-pages-output
-
-
-      
-
-
-
-     
-
   
 
 
