--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,6 +118,7 @@ jobs:
           ref: gh-pages
           path: gh-pages-output
 
+
       - name: 🔹 Download Allure results
         uses: actions/download-artifact@v7
         with:
@@ -130,13 +131,46 @@ jobs:
           name: coverage-report
           path: coverage-report
 
+      - name: 🔹 Restore Allure history cache
+        uses: actions/cache/restore@v5
+        with:
+          path: allure-history
+          key: allure-history-${{ github.sha }}
+          restore-keys: |
+            allure-history-
+
+      
+          
+      #debug
+      - name: 🔹 Debug BEFORE Allure generation
+        run: |
+          echo "=== Allure results (input) ==="
+          find allure-results -type f -name "*.json" | head -5
+          echo "=== Allure history cache ==="
+          ls -la allure-history/ 2>/dev/null || echo "No allure-history folder"
+
       - name: 🔹 Generate Allure Report with history
         uses: simple-elf/allure-report-action@v1.13
         if: always()
         with:
           allure_results: allure-results
           allure_history: allure-history
-          subfolder: allure-report
+          subfolder: ${{ github.run_number }}/allure
+      #debug
+      - name: 🔹 Debug AFTER Allure generation
+        run: |
+          echo "=== Generated report structure ==="
+          find allure-report -type d | head -20
+          echo "=== History files in report ==="
+          find allure-report -name "*history*" -o -name "*trend*" | xargs ls -la 2>/dev/null || echo "No history found"
+      #debug
+      - name: 🔹 Check generated report
+        run: |
+          echo "=== Report has history? ==="
+          find gh-pages-output/${{ github.run_number }}/allure -name "history.json" -o -name "history-trend.json" | xargs ls -la 2>/dev/null || echo "No history files"
+
+          echo "=== History folder exists? ==="
+          ls -la gh-pages-output/${{ github.run_number }}/allure/history/ 2>/dev/null || echo "No history folder"
 
       - name: 🔹 Prepare unified reports structure
         run: |
