--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,7 +162,9 @@ jobs:
         with:
           allure_results: allure-results
           allure_history: allure-history
-          subfolder: ${{ github.run_number }}/allure
+          gh_pages: gh-pages-output
+          #subfolder: ${{ github.run_number }}/allure
+          keep_reports: 10
       #debug
       - name: 🔹 Debug AFTER Allure generation
         run: |
