--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-      - 'fix/**'  # И для веток fix/
-      - 'feat/**' # И для веток feat/
+      - 'fix/**'
+      - 'feat/**'
   pull_request:
     branches:
       - main
@@ -88,12 +88,12 @@ jobs:
           path: coverage-history.json
           key: coverage-history-${{ github.run_id }}
 
-      - name: 🔹 Cache Allure history
-        if: always()
-        uses: actions/cache/save@v5
-        with:
-          path: allure-history
-          key: allure-history-${{ github.sha }}
+#      - name: 🔹 Cache Allure history
+#        if: always()
+#        uses: actions/cache/save@v5
+#        with:
+#          path: allure-history
+#          key: allure-history-${{ github.sha }}
 
 
       - name: 🔹 Upload Coverage report
@@ -140,13 +140,13 @@ jobs:
           name: coverage-report
           path: coverage-report
 
-      - name: 🔹 Restore Allure history cache
-        uses: actions/cache/restore@v5
-        with:
-          path: allure-history
-          key: allure-history-${{ github.sha }}
-          restore-keys: |
-            allure-history-
+#      - name: 🔹 Restore Allure history cache
+#        uses: actions/cache/restore@v5
+#        with:
+#          path: allure-history
+#          key: allure-history-${{ github.sha }}
+#          restore-keys: |
+#            allure-history-
 
       
           
