--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,11 +150,12 @@ jobs:
           gh_pages: gh-pages-output/allure
           keep_reports: 15
 
-      - name:🔹 Debug: check permissions in gh-pages-output
+      - name: Debug check permissions in gh-pages-output
         run: |
           ls -la gh-pages-output/
           ls -la gh-pages-output/allure/
           stat gh-pages-output/allure/
+
       - name: Remove .git from gh-pages-output
         run: rm -rf gh-pages-output/.git
       - name: 🔹 Prepare unified reports structure
