--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,11 +114,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # - name: 🔹 Check out gh-pages for structure
-      #   uses: actions/checkout@v6
-      #   with:
-      #     ref: gh-pages
-      #     path: gh-pages-output
+      - name: 🔹 Check out gh-pages for structure
+        uses: actions/checkout@v6
+        with:
+          ref: gh-pages
+          path: gh-pages-output
 
 
       - name: 🔹 Download Allure results
@@ -133,23 +133,12 @@ jobs:
           name: coverage-report
           path: coverage-report
 
-      - name: 🔹 Prepare clean publish directory
-        run: |
-          mkdir -p publish
-          touch publish/.nojekyll
+      # - name: 🔹 Prepare clean publish directory
+      #   run: |
+      #     mkdir -p publish
+      #     touch publish/.nojekyll
 
-       # === СБРОС ИСТОРИИ (один раз!) ===
-      - name: 🔥 ONE-TIME Reset ALL history
-        run: |
-          echo "🗑️ Resetting history for clean start"
-
-          # 1. Swagger Coverage
-          rm -f coverage-history.json
-          echo "{}" > coverage-history.json
-
-          # 2. Allure
-          rm -rf allure-history/
-          mkdir -p allure-history
+      
 
 
       - name: 🔹 Generate Allure Report with history
@@ -158,17 +147,17 @@ jobs:
         with:
           allure_results: allure-results
           allure_history: allure-history
-          gh_pages: publish/allure
-          keep_reports: 15
+          gh_pages: gh-pages-output/allure
+          keep_reports: 10
 
 
       - name: 🔹 Prepare unified reports structure
         run: |
           BUILD_NUMBER=${{ github.run_number }}
-          mkdir -p publish/allure/$BUILD_NUMBER
-          mkdir -p publish/coverage/$BUILD_NUMBER
+          mkdir -p gh-pages-output/allure/$BUILD_NUMBER
+          mkdir -p gh-pages-output/coverage/$BUILD_NUMBER
 
-          cp -r allure-history/* publish/allure/ || (echo "❌ Allure history not found" && exit 1)
+          cp -r allure-history/* gh-pages-output/allure/ || (echo "❌ Allure history not found" && exit 1)
           cp -v coverage-report/coverage.html publish/coverage/$BUILD_NUMBER/index.html || (echo "❌ coverage.html not found" && exit 1)
 
           cat > publish/index.html << EOF
@@ -226,8 +215,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: publish
-          force_orphan: true
+          publish_dir: gh-pages-output
 
 
 
