--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,10 +133,16 @@ jobs:
           name: coverage-report
           path: coverage-report
 
-      # - name: 🔹 Prepare clean publish directory
-      #   run: |
-      #     mkdir -p publish
-      #     touch publish/.nojekyll
+      - name: Prepare working directory from gh-pages
+        run: |
+          # Создаем чистую рабочую директорию
+          mkdir -p gh-pages-output
+          
+          # Копируем все из временной gh-pages в рабочую директорию
+          cp -r gh-pages-temp/* gh-pages-output/ 2>/dev/null || true
+          
+          # Создаем необходимые директории
+          mkdir -p gh-pages-output/.nojekyll
 
       
 
@@ -216,6 +222,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: gh-pages-output
+          keep_files: false
 
 
 
