--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,10 +139,9 @@ jobs:
           mkdir -p gh-pages-output
           
           # Копируем все из временной gh-pages в рабочую директорию
-          cp -r gh-pages-temp/* gh-pages-output/ 2>/dev/null || true
+          cp -a gh-pages-temp/. gh-pages-output/ 2>/dev/null || true
           
-          # Создаем необходимые директории
-          mkdir -p gh-pages-output/.nojekyll
+#          touch gh-pages-output/.nojekyll
 
       
 
@@ -164,7 +163,7 @@ jobs:
           mkdir -p gh-pages-output/coverage/$BUILD_NUMBER
 
           cp -r allure-history/* gh-pages-output/allure/ || (echo "❌ Allure history not found" && exit 1)
-          cp -v coverage-report/coverage.html publish/coverage/$BUILD_NUMBER/index.html || (echo "❌ coverage.html not found" && exit 1)
+          cp -v coverage-report/coverage.html gh-pages-output/coverage/$BUILD_NUMBER/index.html || (echo "❌ coverage.html not found" && exit 1)
 
           cat > publish/index.html << EOF
           <!DOCTYPE html>
